<resources>
    <string name="app_name">beGood</string>
    <string name="title_home">Home</string>
    <string name="title_challenges">Challenges</string>
    <string name="title_scoreboard">Scoreboard</string>
    <string name="daily_challenge_title">daily challenge</string>
    <string name="decline">decline</string>
    <string name="accept">accept</string>
    <string name="counter">Scores: %f:</string>
    <string name="start">start</string>
    <string name="start_challenge_title">Are you up for a challenge?!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>