<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="vaida.dryzaite.begoodapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_challenges"
        android:name="vaida.dryzaite.begoodapp.ui.challenges.ChallengesFragment"
        android:label="@string/title_challenges"
        tools:layout="@layout/fragment_challenges" />

    <fragment
        android:id="@+id/navigation_scoreboard"
        android:name="vaida.dryzaite.begoodapp.ui.scoreboard.ScoreboardFragment"
        android:label="@string/title_scoreboard"
        tools:layout="@layout/fragment_scoreboard" />
</navigation>