<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="vaida.dryzaite.begoodapp.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.home.HomeFragment">

        <TextView
            android:id="@+id/challenge_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/daily_challenge_title"/>

        <Button
            android:id="@+id/accept_challenge_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="@string/accept"
            app:layout_constraintEnd_toStartOf="@id/decline_challenge_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/challenge_title"
            android:visibility="invisible"/>
<!--        android:onClick="@{() -> viewModel.onChallengeAccepted()}"-->
        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="@string/start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/challenge_title" />

<!--        android:onClick="@{() -> viewModel.onStart()}-->
        <Button
            android:id="@+id/decline_challenge_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textAlignment="center"
            android:textSize="15sp"
            android:text="@string/decline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/accept_challenge_button"
            app:layout_constraintTop_toBottomOf="@id/challenge_title"
            android:visibility="invisible"/>
<!--        android:onClick="@{() -> viewModel.onChallengeDeclined()}"-->

        <TextView
            android:id="@+id/counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="150dp"
            android:textAlignment="center"
            android:textSize="25sp"
            app:layout_constraintTop_toBottomOf="@id/accept_challenge_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/counter"
            android:visibility="invisible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>